--- a/concepts/extensibility-integration/platform-portability.mdx
+++ b/concepts/extensibility-integration/platform-portability.mdx
@@ -1,181 +1,121 @@
 ---
-title: "Platform Portability and Configuration"
-description: "Review how the framework ensures portability across compilers and platforms, with porting layers and configuration flags. Learn how these mechanisms support extensibility and maintainability in diverse environments."
+title: "Platform Abstraction and Portability"
+description: "Dive into how GoogleTest and GoogleMock provide cross-platform compatibility using abstractions for threading, file paths, synchronization, and OS differences, ensuring consistent test behavior on any supported environment."
 ---
 
-# Platform Portability and Configuration
+# Platform Abstraction and Portability
 
-GoogleTest is designed to provide a consistent, reliable testing framework across a multitude of compilers, operating systems, and platforms. This page explains how GoogleTest achieves portability through carefully designed porting layers, configuration macros, and build system flags. These mechanisms enable users to seamlessly build and run tests while supporting extensibility and maintainability across diverse development environments.
+GoogleTest and GoogleMock are designed to offer seamless cross-platform compatibility for C++ testing and mocking needs. This is achieved through careful use of abstractions that shield users from the complexities and differences of underlying operating systems, threading models, file systems, synchronization primitives, and compiler features. This guide explains how platform portability is implemented and how it ensures your tests behave consistently across all supported environments.
 
 ---
 
-## Understanding Portability in GoogleTest
+## Why Platform Abstraction Matters
 
-Imagine writing a test once and having it work flawlessly whether you compile on Windows with MSVC, on Linux with GCC, or on MacOS with Clang. GoogleTest makes this vision a reality by abstracting platform differences behind carefully crafted layers.
+Imagine you maintain a large C++ codebase used on Linux, Windows, and MacOS. Without portability layers, writing tests that work identically on all these platforms becomes challenging due to differences in filesystem paths, threading APIs, synchronization mechanisms, and compiler capabilities.
 
-Portability here means:
+GoogleTest and GoogleMock solve this by providing a unified interface that handles these platform specifics internally. This means your tests can focus solely on verifying logic without platform-specific conditionals or hacks.
 
-- **Compiler Support:** Handling differences between MSVC, GCC, Clang, Intel LLVM, and others
-- **Operating System Differences:** Adapting to nuances in Windows, Linux, MacOS, and others
-- **Feature Detection:** Deciding what platform features are available and configuring accordingly
-- **Build Configuration:** Applying correct compiler and linker flags suitable for each environment
+---
 
-These aspects ensure that developers can focus on writing tests, confident that platform-specific complexities are handled gracefully.
+## Key Areas of Portability
 
-## Porting Layers: The Backbone of Platform Agnosticism
+### 1. Platform Detection and Environment Macros
 
-GoogleTest's porting layers act as adapters that harmonize platform-specific APIs and behaviors.
+At the core, GoogleTest detects the target platform during compilation using macros defined in files like `gtest-port-arch.h`. Based on this, it sets environment-specific flags (e.g., `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`, `GTEST_OS_MAC`). These macros enable conditional compilation of platform-dependent implementations, allowing a single test suite to compile and run correctly everywhere.
 
-### Key Components of Porting Layers
+### 2. Threading and Synchronization Abstractions
 
-- **Macros and Flags in `gtest-port.h`:** These determine the environment features available, such as thread support, exception handling, RTTI, and filesystem capabilities. For example, macros like `GTEST_HAS_PTHREAD`, `GTEST_HAS_EXCEPTIONS`, and `GTEST_OS_WINDOWS` conditionally enable or disable features at compile time.
+Tests often spawn threads or require synchronization. GoogleTest defines common threading primitives such as `Mutex`, `MutexLock`, and `ThreadLocal` with implementations tailored for each platform:
 
-- **Platform Detection in `gtest-port-arch.h`:** This header sets platform macros (e.g., `GTEST_OS_WINDOWS`, `GTEST_OS_LINUX`) automatically based on compiler predefined macros, enabling conditional compilation.
+- On **POSIX platforms** (Linux, Mac, BSD), pthreads are used.
+- On **Windows**, native Windows threading APIs are used, avoiding dependencies on including heavyweight headers like `<windows.h>`.
+- For other platforms or where threading is unavailable, dummy no-op implementations allow compilation, though without thread safety.
 
-- **Synchronization Primitives:** Based on detected platform features, GoogleTest uses the appropriate synchronization mechanisms. For example, on POSIX-like platforms with pthreads, it uses `pthread_mutex_t`, whereas on Windows it uses Windows API critical sections.
+This abstraction ensures your tests are thread-safe where supported and compiles cleanly even where threading support is limited.
 
-- **File System Wrappers:** Functions like `ChDir()`, `Stat()`, and `FOpen()` provide a consistent interface despite underlying differences.
+### 3. Filesystem and Path Handling
 
-By encapsulating platform-specific details here, GoogleTest maintains a single codebase that works everywhere.
+Platforms have different conventions for file paths (`/` vs `\` on Windows) and filesystem APIs. GoogleTest abstracts these differences:
 
-## Configuring Compiler and Linker Flags
+- It defines path separators accordingly (e.g., `GTEST_PATH_SEP_`).
+- Specialized wrappers for file operations like opening, reading, writing, and closing files handle platform nuances, including wide-character support on Windows.
 
-Configuration flags are essential to ensure the compiler behaves in ways compatible with GoogleTest's requirements.
+This abstraction means that specifying input or output files in your tests works seamlessly regardless of underlying OS.
 
-### How Flags Are Managed
+### 4. Stream Redirection
 
-- GoogleTest uses CMake macros (`config_compiler_and_linker()`) to set compiler flags dynamically depending on the compiler and platform detected.
+For tests that validate output sent to standard streams (`stdout` and `stderr`), GoogleTest supports stream redirection on platforms that allow it. It detects platform capabilities and either enables or disables features transparently, meaning tests using output capture APIs behave consistently.
 
-- Compiler-specific settings are applied, such as:
-  - For **MSVC**, flags adjust runtime library linkage (`/MT` vs `/MD`), warning levels, and UTF-8 source encoding.
-  - For **Clang** and **GCC**, flags enable strict warnings (`-Wall -Wshadow`), configure exception and RTTI support, and disable problematic warnings.
+### 5. Compiler and Language Feature Support
 
-- Threading support detection toggles inclusion of pthread libraries and macros like `GTEST_HAS_PTHREAD`.
+GoogleTest requires at least C++17 and detects compiler capabilities related to exceptions, RTTI, wide string support, and regular expression engines. This detection lets it enable or disable features accordingly so tests compile and run on compilers matching policy requirements.
 
-- Flags are separated according to exception support, RTTI, and strictness.
+---
 
-This setup ensures the library builds correctly and efficiently, reducing runtime crashes and linker errors.
+## User Experience: Writing Portable Tests
 
-### Best Practices
+As a test author, here are the practical takeaways:
 
-- Always build GoogleTest with **C++17** or above to meet the library's minimal standard requirements.
+- **You do not need to write platform-specific code in your tests.** The platform portability layer abstracts away OS and compiler differences.
+- **Use GoogleTest’s threading and synchronization primitives** (e.g., `Mutex`, `MutexLock`, `ThreadLocal`) for thread safety. These work consistently across supported OSes.
+- **Use GoogleTest utilities for file operations and paths** to avoid platform-specific bugs related to path separators and file modes.
+- **Rely on GoogleTest macros for feature detection** if you must write conditional tests (e.g., only run a test if threading is supported).
 
-- When building as shared libraries (DLLs) on Windows, enable `-DGTEST_CREATE_SHARED_LIBRARY=1`.
 
-- Use CMake options like `gtest_force_shared_crt` to control how runtimes are linked, ensuring compatibility with your project's settings.
+---
 
-<Tip>
-GoogleTest’s CMake build scripts manage most compiler and linker flags automatically. When integrating manually, review these settings to avoid conflicts.
-</Tip>
+## Example: Portable Thread-Local Storage Use
 
-## Customization and Extensibility
+```c++
+#include <gtest/gtest.h>
 
-For advanced use cases or unusual platforms, GoogleTest provides injection points allowing user-defined macros and overrides.
+// Using GoogleTest ThreadLocal abstraction
 
-### Customization Points Include:
+testing::internal::ThreadLocal<int> thread_value(42);
 
-- **Macros in `custom/gtest-port.h`:** Users can override feature-detection macros, logging implementations, threading primitives, and API exporting symbols.
-
-- **Threading and Synchronization Customization:** If your platform provides native notification or mutex implementations, you can enable them via macros like `GTEST_HAS_NOTIFICATION_` or `GTEST_HAS_MUTEX_AND_THREAD_LOCAL_`.
-
-- **Stack Trace and Temp Directory Functions:** Overrides for stack trace retrieval and temporary directory location can be defined.
-
-These points empower users to adapt GoogleTest to environments with specialized constraints or requirements.
-
-<Warning>
-Overrides in the custom directory should be used judiciously to avoid breaking expected behavior or compatibility.
-</Warning>
-
-## User Workflow: Building GoogleTest Portably
-
-1. **Select Platform and Compiler:** GoogleTest automatically detects the environment when building via CMake.
-
-2. **Run CMake Configuration:** The `config_compiler_and_linker()` macro sets the appropriate flags.
-
-3. **Compile with Correct Flags:** Flags manage runtime linkage, exceptions, RTTI, warnings, and threading.
-
-4. **Link Dependencies:** Pthreads or Windows threading libraries are linked conditionally based on platform macros.
-
-5. **Run Tests Confidently:** Tests built this way behave consistently across supported platforms.
-
-This flow minimizes manual configuration and platform-specific code in user projects.
-
-## Troubleshooting Common Portability Issues
-
-- **Missing pthread Library:** If tests fail to link on Unix-like systems, verify that `-pthread` is included. When using CMake, GoogleTest normally handles this.
-
-- **Runtime Library Conflicts on Windows:** Mismatched static/dynamic CRT linkage might cause linker errors or crashes. Use the `gtest_force_shared_crt` CMake option to align GoogleTest’s CRT settings with your project.
-
-- **Unsupported Compiler or Version:** GoogleTest enforces a minimum of C++17 and specific compiler compatibility. Ensure your compiler version is supported (see [Supported Platforms](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)).
-
-- **Platform-Specific Macros Missing:** If you manually build without CMake, ensure relevant macros like `GTEST_HAS_PTHREAD` are properly defined.
-
-<Check>
-Always check compiler warnings and CMake output for information about platform detection and flag application.
-</Check>
-
-## Illustrative Overview of Portability Architecture
-
-```mermaid
-flowchart TD
-  Platform["Target Platform & Compiler"] --> Detection["Automatic Platform Detection"]
-  Detection -->|Defines| Macros["Platform & Feature Macros (gtest-port.h)"]
-  Macros --> Synchronization["Select Synchronization Primitives"]
-  Macros --> Filesystem["Configure File System Wrappers"]
-  Macros --> Logging["Configure Logging & Diagnostic Macros"]
-  Platform & Compiler --> CMakeConfig["CMake Build Configuration Script"]
-  CMakeConfig --> CompilerFlags["Set Compiler & Linker Flags"]
-  CompilerFlags -.-> Build["Build (Compile & Link)"]
-  Synchronization -.-> Build
-  Filesystem -.-> Build
-  Logging -.-> Build
-  Build --> TestingApp["Test Executable with Portable Configuration"]
-
-  classDef platform fill:#a2d4ab,stroke:#333,stroke-width:1px
-  class Platform,Detection,Macros platform
-
-  classDef build fill:#f9f,stroke:#555,stroke-width:1px
-  class CMakeConfig,CompilerFlags,Build build
-
-  classDef features fill:#ffe066,stroke:#333,stroke-width:1px
-  class Synchronization,Filesystem,Logging features
+TEST(Portability, ThreadLocalWorks) {
+  // Each thread gets its own value instance.
+  EXPECT_EQ(thread_value.get(), 42);
+  thread_value.set(99);
+  EXPECT_EQ(thread_value.get(), 99);
+}
 ```
 
-## Related Resources
-
-- [Supported Platforms & Compatibility](/overview/integration-platforms/platform-support) for detailed platform information
-- [Custom Actions and Matchers](/concepts/extensibility-integration/custom-actions-matchers) for extending GoogleTest
-- [CMake Build System Internals](googletest/cmake/internal_utils.cmake) for flag configurations
-- [Customization Points](googletest/include/gtest/internal/custom/README.md) for user overrides
+This code runs on Windows, Linux, and Mac without modification because `ThreadLocal` adapts to each platform’s thread local storage mechanism behind the scenes.
 
 ---
 
-By mastering platform portability and configuration, you ensure your tests run reliably wherever your code goes — whether on your local machine, CI servers, or production-like environments.
+## Platform Abstraction Implementation Highlights
 
-Harness these mechanisms to achieve scalable, maintainable, and extensible testing that transcends platform boundaries.
+| Aspect                  | Implementation Details                                   | Key Files                   |
+|-------------------------|----------------------------------------------------------|-----------------------------|
+| Platform Macros         | Identify OS variants using compiler defined macros        | `gtest-port-arch.h`         |
+| Threading Primitives    | `Mutex`, `MutexLock`, `ThreadLocal` with POSIX/Win impl  | `gtest-port.h`              |
+| File Handling          | POSIX and Windows wrappers for file I/O, path separators | `gtest-port.h`, `posix` ns |
+| Regular Expressions     | Use RE2, POSIX regex, or simple regex depending on env     | `gtest-port.h`              |
+| Stream Capture          | Enable/disable based on platform capabilities              | `gtest-port.h`              |
 
 ---
 
-## Quick Tips
+## Common Pitfalls and How to Avoid Them
 
-- Build GoogleTest with at least **C++17** support.
-- Use the provided CMake build scripts to benefit from automatic flag and platform handling.
-- Define or override macros only if you have platform-specific needs.
-- Enable shared runtime on Windows by setting `gtest_force_shared_crt`.
-- Keep your build system (e.g., CMake version) up to date to ensure compatibility.
+- **Assuming thread safety everywhere:** GoogleTest is thread-safe only on supported platforms with pthreads or Windows threading APIs. Check `GTEST_IS_THREADSAFE` macro before launching multi-threaded tests.
+
+- **Use API-provided path utilities:** Direct use of OS path strings can introduce bugs. Prefer GoogleTest’s path macros and file utilities.
+
+- **Handling disabled features:** Some embedded or mobile platforms lack filesystem or threading support, leading to limited GoogleTest capabilities. Write conditional tests or skip as needed.
+
+---
 
 ## Summary
-This page focused exclusively on how GoogleTest manages portability and configuration to support a wide range of platforms and compilers consistently and efficiently. Users learn about platform detection, porting layer abstractions, compiler and linker flag management, customization points, and common pitfalls.
 
----
+GoogleTest and GoogleMock’s platform abstraction layers ensure you write tests once and run them everywhere supported. By managing OS differences including threading, paths, synchronization, and compiler capabilities internally, the frameworks provide a reliable, consistent testing experience.
 
-# Further Reading
+## Further Reading
 
-- [Supported Platforms](docs/platforms.md)
-- [GoogleTest Primer](docs/primer.md)
-- [Customization Points](googletest/include/gtest/internal/custom/README.md)
-- [GoogleMock Porting](googlemock/include/gmock/internal/gmock-port.h)
-- [CMake Build Internal Utilities](googletest/cmake/internal_utils.cmake)
+- [GoogleTest Primer](docs/primer.md) — foundational testing concepts
+- [Portability & Platform Utilities API Reference](api-reference/advanced-apis-config/portability-platform-utils.mdx) — concrete classes and APIs for cross-platform support
+- [Supported Platforms Documentation](docs/platforms.md) — details about environment compatibility
+- [Building and Running Tests Guide](guides/getting-started-workflows/building-and-running-tests.mdx) — integration with build tools and environment tweaks
 
-
----
+<Source url="https://github.com/google/googletest" paths={[{"path": "googletest/include/gtest/internal/gtest-port.h","range": "1-905"},{"path": "googletest/include/gtest/internal/gtest-port-arch.h","range": "1-84"},{"path": "googlemock/include/gmock/internal/gmock-port.h","range": "1-120"}]} />
