--- a/concepts/extensibility-integration/customization-extension.mdx
+++ b/concepts/extensibility-integration/customization-extension.mdx
@@ -1,269 +1,239 @@
 ---
-title: "Customization and Framework Extension"
-description: "Learn how to extend the testing framework, including defining custom matchers, actions, and assertion macros. This empowers advanced users to tailor GoogleTest and GoogleMock to unique scenarios and coding standards."
+title: "Customization and Extending the Framework"
+description: "Learn the architectural hooks for customizing assertions, matchers, actions, and reporters. This page highlights how users and integrators can extend the framework for specialized workflows or to plug in with larger build and CI systems."
 ---
 
-# Customization and Framework Extension
+# Customization and Extending the Framework
 
-GoogleTest and GoogleMock provide rich customization points that empower advanced users to tailor the testing framework for unique scenarios and coding standards. This guide helps you extend the framework by defining custom matchers, actions, and assertion macros, enabling you to precisely specify test behavior and output.
-
----
-
-## Customizing GoogleTest Behavior
-
-GoogleTest accepts certain user-defined macros and hooks that allow you to override internal implementations to meet advanced or environment-specific requirements.
-
-### Custom Macros in GoogleTest
-
-Within your test environment or build configuration, you can define the following macros to inject custom behaviors:
-
-- `GTEST_OS_STACK_TRACE_GETTER_`: Specifies a custom implementation class for obtaining OS stack traces.
-- `GTEST_CUSTOM_TEMPDIR_FUNCTION_`: Overrides the default temporary directory function accessed via `testing::TempDir()`.
-
-Additionally, for logging and threading support, GoogleTest allows overrides via macros defined in headers like `gtest-port.h`, including:
-
-- Logging macros such as `GTEST_LOG_(severity)`, `GTEST_CHECK_(condition)`, plus user-provided functions like `LogToStderr()`.
-- Threading feature toggles like `GTEST_HAS_NOTIFICATION_` and `GTEST_HAS_MUTEX_AND_THREAD_LOCAL_`, with the responsibility to provide necessary static mutex declarations and definitions.
-- Export symbol annotations (`GTEST_API_`) for controlling API visibility.
-
-> These customization points make it feasible to integrate GoogleTest into custom runtime environments or platforms with specialized requirements.
+GoogleTest and GoogleMock provide powerful capabilities not only out-of-the-box but also through well-defined architectural hooks that let you extend and customize the framework. This page details how you can create custom assertions, matchers, actions, and reporters to tailor the framework’s behavior to specialized workflows, integrate with larger build and CI/CD systems, or support domain-specific testing needs.
 
 ---
 
-## Extending GoogleMock with Custom Matchers and Actions
+## Why Customize?
 
-The GoogleMock framework provides a powerful system to define custom matchers and actions, allowing you to enhance test expressiveness and adapt the framework to your domain-specific needs.
+Out-of-the-box, GoogleTest and GoogleMock cover a broad set of testing needs, but real-world projects often require extending:
 
-### Creating Custom Matchers
+- To express domain-specific semantics through **custom assertions and matchers** that improve test clarity and diagnostics.
+- To control mock behavior beyond built-in patterns using **custom actions**.
+- To integrate with sophisticated reporting and CI workflows by plugging in **custom reporters or event listeners**.
+- To support specialized parameterization, filtering, or environment control.
 
-Matchers specify criteria that mock method arguments must satisfy. You can create custom matchers with:
-
-#### The MATCHER Macros
-
-- `MATCHER(name, description)`: Defines a parameterless matcher.
-- `MATCHER_P(name, param, description)`: Defines a matcher parameterized by one value.
-- `MATCHER_P2`, `MATCHER_P3`, … up to `MATCHER_P10` for multi-parameter matchers.
-
-Inside these macros, you implement a `MatchAndExplain` function that returns a boolean, indicating whether the argument meets the condition. You have access to the matched `arg` and can stream diagnostic information to `result_listener` to enhance failure messages.
-
-**Example:** Parameterless matcher to check if a number is even:
-
-```cpp
-MATCHER(IsEven, "") {
-  return (arg % 2) == 0;
-}
-```
-
-Usage:
-
-```cpp
-EXPECT_CALL(mock_obj, Method(IsEven()));
-```
-
-**Example:** Parameterized matcher with custom description:
-
-```cpp
-MATCHER_P(InRange, range, absl::StrCat(negation ? "isn't" : "is", " in range ", range)) {
-  return arg >= 0 && arg <= range;
-}
-```
-
-Usage:
-
-```cpp
-EXPECT_THAT(value, InRange(100));
-```
-
-#### Writing Matcher Classes Directly
-
-For advanced control or reusable polymorphic matchers, you can implement matcher classes with:
-
-- A typedef `using is_gtest_matcher = void;`
-- A templated `MatchAndExplain(const T& value, std::ostream* listener)` method.
-- `DescribeTo(std::ostream*)` and `DescribeNegationTo(std::ostream*)` to customize failure messages.
-
-This approach enables matchers that adapt to multiple argument types seamlessly.
-
-### Creating Custom Actions
-
-Actions specify what a mock function does when called. You can create custom actions by:
-
-#### Using Lambdas or Functors
-
-The simplest way to create a custom action is a callable object (lambdas, functors):
-
-```cpp
-EXPECT_CALL(mock, Foo(_))
-    .WillOnce([](int x) { return x * 2; });
-```
-
-These must match the signature of the mocked function.
-
-#### Using `ACTION()` and `ACTION_P()` Macros
-
-Legacy macros let you define named actions similar to matchers:
-
-```cpp
-ACTION(IncrementArg) {
-  return ++(*arg0);
-}
-```
-
-You can define parameterized actions similarly with `ACTION_P`.
-
-#### Implementing the `ActionInterface<F>`
-
-For finest control, implement the interface:
-
-```cpp
-template <typename F> class ActionInterface {
- public:
-  virtual ~ActionInterface();
-  virtual Result Perform(const ArgumentTuple& args) = 0;
-};
-```
-
-Where `F` is the signature of the mock method and `ArgumentTuple` is a tuple of arguments.
-
-#### Writing Polymorphic Actions
-
-When you want an action that can be used with multiple function signatures, define a polymorphic action class with a templated `Perform()` method and wrap it with `MakePolymorphicAction()`.
-
-Example: Return second argument of any compatible function:
-
-```cpp
-class ReturnSecondArgAction {
- public:
-  template <typename R, typename Tuple>
-  R Perform(const Tuple& args) const { return std::get<1>(args); }
-};
-
-PolymorphicAction<ReturnSecondArgAction> ReturnSecondArg() {
-  return MakePolymorphicAction(ReturnSecondArgAction());
-}
-```
-
-### Working with Actions on Arguments
-
-You can use helper actions like:
-
-- `SetArgPointee<N>(value)`: Sets the pointee of the Nth mock function argument.
-- `DoAll(...)`: Combines multiple actions to execute sequentially.
-- `Invoke(...)`: Invokes a function, method, or callable as an action.
-- `InvokeWithoutArgs(...)`: Invokes a zero-argument callable ignoring mock args.
-- `WithArgs<...>(action)`: Selects specific mock arguments to pass to an action.
-
-These facilitate complex behaviors such as side-effect injection or argument transformations.
+Customization ensures tests remain expressive, maintainable, and tightly aligned with project requirements.
 
 ---
 
-## Changing Default Mock Behavior: NiceMock, NaggyMock, StrictMock
+## Custom Assertions and Matchers
 
-GoogleMock provides wrappers to control how strictly mock objects verify call expectations:
+Custom assertions and matchers allow you to define new conditions for validating test results and mock call arguments, improving test expressiveness.
 
-- **NiceMock<T>**: Suppresses warnings about uninteresting calls (calls with no expectation). Use this when uninteresting calls should be silently accepted.
-- **NaggyMock<T>**: The default behavior, prints warnings for uninteresting calls.
-- **StrictMock<T>**: Converts uninteresting calls into errors, failing tests on any unexpected call.
+### Writing Custom Matchers Quickly
 
-These wrappers inherit constructors of `T` and are usable wherever `T` is accepted.
-
-**Caution:** These wrappers affect only *uninteresting calls*, not calls that violate existing expectations.
-
----
-
-## Using Customization to Improve Test Workflows
-
-Customizing and extending GoogleTest and GoogleMock empowers you to:
-
-- Express domain-specific constraints precisely with custom matchers.
-- Model complex mock behaviors with custom actions.
-- Simplify test code readability by crafting reusable matchers and actions.
-- Integrate GoogleTest/GoogleMock into unique build or runtime environments.
-
-Modern C++ features such as lambdas and variadic templates make writing custom extensions concise and powerful.
-
----
-
-## Practical Tips and Best Practices
-
-- When defining custom matchers or actions, ensure they are functionally pure to avoid flaky tests.
-- Use `SafeMatcherCast<T>(m)` to adapt matchers safely across compatible argument types.
-- Use meaningful descriptions in matchers to generate helpful diagnostic messages.
-- Prefer `ON_CALL()` to set default mock behaviors; use `EXPECT_CALL()` to specify and verify expected calls.
-- Use `RetiresOnSaturation()` to control when expectations become inactive.
-- If mocking methods with move-only types, prefer lambdas or callables for actions.
-- Use `NiceMock` for less brittle tests during rapid development; apply `StrictMock` only when you want strict verification.
-
----
-
-## Further Extensions
-
-GoogleTest and GoogleMock's design allows further powerful customization:
-
-- Providing your own implementations of logging, thread synchronization, or stack trace retrieval.
-- Defining custom printers for new types to improve error message clarity.
-- Implementing new cardinality classes to express call count constraints.
-
----
-
-## References
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Recipes for custom matchers and actions.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly introduction to mocking.
-- [Matchers Reference](/api-reference/core-apis/matchers) — Built-in and custom matcher capabilities.
-- [Actions Reference](/api-reference/advanced-mocking-features/actions) — Available actions and how to extend them.
-- [Mocking Reference](/reference/mocking) — Details on mock declarations, expectations, and calls.
-
----
-
-## Summary
-
-Customization and framework extension in GoogleTest and GoogleMock let you tailor the testing interface to your codebase's needs. By defining custom matchers and actions, setting default behaviors, and adjusting mock strictness, you gain fine control over test behavior and output, enabling robust, expressive, and maintainable tests.
-
----
-
-## Example: Defining a Custom Matcher
+Use the `MATCHER` and `MATCHER_P` macros to write matchers succinctly:
 
 ```cpp
 MATCHER(IsDivisibleBy7, "") {
-  if ((arg % 7) == 0) return true;
-  *result_listener << "the remainder is " << (arg % 7);
-  return false;
+  return (arg % 7) == 0;
 }
 
-// Usage in test:
-EXPECT_THAT(value, IsDivisibleBy7());
+MATCHER_P(InClosedRange, range, "") {
+  return (range.low <= arg) && (arg <= range.high);
+}
 ```
 
-## Example: Defining a Custom Action
+These macros let you focus on the core matching logic. Use these inside `EXPECT_CALL` or `EXPECT_THAT` to check arguments with domain semantics.
+
+### Implementing Matcher Classes
+
+For fine control, write a matcher class implementing `MatchAndExplain`, `DescribeTo`, and `DescribeNegationTo` methods. This approach gives precise control over matching logic and failure messages.
+
+### Polymorphic Matchers
+
+Define polymorphic matchers that work over multiple argument types by templating the matcher’s `MatchAndExplain` method, allowing your matcher to seamlessly adapt to test contexts.
+
+### Best Practices
+
+- Keep matchers **functional and side-effect free**.
+- Provide meaningful descriptions to help diagnose failures.
+- Use existing matchers as building blocks.
+
+For detailed recipes and examples, see the [Writing Custom Assertions and Matchers guide](../guides/advanced-testing-patterns/custom-assertions-matchers.mdx).
+
+---
+
+## Creating Custom Actions
+
+Beyond matching arguments, you often need custom behavior when a mock method is called.
+
+### Simple Custom Actions
+
+Define actions as structs or lambdas with the appropriate call operator:
 
 ```cpp
-class MultiplyByAction {
- public:
-  explicit MultiplyByAction(int factor) : factor_(factor) {}
-
-  template <typename R, typename Args>
-  R Perform(const Args& args) const {
-    return std::get<0>(args) * factor_;
-  }
-
- private:
-  int factor_;
+struct MultiplyByTwo {
+  int operator()(int x) const { return x * 2; }
 };
 
-// Wrapper factory
-PolymorphicAction<MultiplyByAction> MultiplyBy(int factor) {
-  return MakePolymorphicAction(MultiplyByAction(factor));
-}
-
-// Usage in test:
-EXPECT_CALL(mock, Foo(_)).WillOnce(MultiplyBy(3));
+EXPECT_CALL(mock, Multiply(_))
+    .WillOnce(MultiplyByTwo());
 ```
 
+Or with lambdas:
+
+```cpp
+EXPECT_CALL(mock, Add(_, _))
+    .WillOnce([](int a, int b) { return a + b; });
+```
+
+### Parameterized Actions
+
+Use `ACTION_P` macros to create actions with parameters:
+
+```cpp
+ACTION_P(AddN, n) {
+  return arg0 + n;
+}
+
+EXPECT_CALL(mock, Add(_))
+    .WillOnce(AddN(5));
+```
+
+### Advanced: Template-Parameterized Actions
+
+If action behavior depends on template parameters that can’t be inferred naturally, use `ACTION_TEMPLATE` to define such actions, enabling powerful generic action implementations.
+
+### Using Callables and Delegate Actions
+
+You can pass arbitrary functions, functors, or lambdas to `Invoke()` for delegation.
+
+### Notes on Move-only Types
+
+Actions supporting move-only argument types or return values require care. Prefer lambdas and struct-based actions over macro-based actions for best compatibility.
+
+For detailed guidance, see the [Actions Reference](../docs/reference/actions.md) and the [gMock Cookbook](../docs/gmock_cook_book.md#WritingNewActions).
+
 ---
 
-For full explored examples and idiomatic usages, please refer to the official GoogleTest and GoogleMock cookbooks and cheat sheets.
+## Extending Mock Classes
+
+### Creating Mock Classes
+
+Use the `MOCK_METHOD` macro to define methods in your mock classes, remembering to place them in a `public:` section regardless of the base access level.
+
+### Supporting Complex Cases
+
+- Mock overloaded methods carefully by specifying signatures.
+- Handle const and noexcept methods by adding the appropriate specifiers.
+- Use `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to control uninteresting call behaviors.
+
+### Delegating Calls
+
+You can delegate default behaviors to fakes, real objects, or parent classes using `ON_CALL` with lambdas, as shown:
+
+```cpp
+ON_CALL(mock, MethodName).WillByDefault([this](Args... args) {
+  return real_.MethodName(args...);
+});
+```
+
+### Simplifying Interfaces in Mocks
+
+To make mocks friendlier, you can delegate complex original methods to lightweight mock methods with simpler signatures.
+
+See [Mock Object Creation & Configuration](../docs/reference/mocking.md#MOCK_METHOD) for comprehensive usage.
 
 ---
 
-<Source url="https://github.com/google/googletest" />
+## Customizing Test Reporting
+
+GoogleTest supports plugging custom event listeners and reporters to integrate with external CI systems or to produce specialized reports.
+
+### Event Listeners
+
+By implementing the `TestEventListener` interface, you can hook into granular test lifecycle events, such as test start, success, failure, and suite completion.
+
+### Using Custom Listeners
+
+Register custom listeners by using `TestEventListeners::Append()` during initialization, to add or replace existing listeners.
+
+### Use Cases
+
+- Custom XML or JSON reporting formats
+- Integration with build dashboards
+- Specialized failure logging or metrics
+
+Refer to the [GoogleTest Primer](../overview/introduction-core-value/what-is-googletest.mdx) for event listener details.
+
+---
+
+## Integration with Build & CI Systems
+
+The framework is designed to support integration with various build systems such as CMake and Bazel, enabling smooth automation.
+
+### Build System Compatibility
+
+GoogleTest and GoogleMock require a C++17-capable compiler and support Linux, Windows, and MacOS broadly.
+
+### Customization Tips
+
+- Configure test filters and sharding for parallel execution.
+- Use custom test reporters for CI feedback.
+- Set environment macros or override platform abstractions if needed.
+
+See [Integration & Compatibility](../overview/architecture-key-concepts/integration-with-build-and-tools.mdx) and [Test Integration Guide](../guides/integration-and-best-practices/test-integration.mdx) for full details.
+
+---
+
+## Troubleshooting and Best Practices
+
+### Common Pitfalls
+
+- Ensure your custom assertions and matchers are side-effect free.
+- Be cautious when sharing actions with internal state.
+- Always set expectations before exercising mocks.
+
+### Performance Considerations
+
+- Move mock class constructor/destructor definitions out-of-line to speed builds.
+- Use sequences and retirement to manage expectation lifetimes precisely.
+
+### Helpful Tips
+
+- Suppress or adjust mock warnings using `NiceMock` or verbosity flags.
+- Use `InvokeArgument` to call mock function arguments that are callable.
+- Leverage `DefaultValue<T>` for custom default return values.
+
+---
+
+## Resources and Further Reading
+
+- [Writing Custom Assertions and Matchers](../guides/advanced-testing-patterns/custom-assertions-matchers.mdx)
+- [Actions Reference](../docs/reference/actions.md)
+- [Mock Object Creation & Configuration](../docs/reference/mocking.md)
+- [gMock Cookbook](../docs/gmock_cook_book.md)
+- [Integration & Compatibility](../overview/architecture-key-concepts/integration-with-build-and-tools.mdx)
+
+Explore these to master tailoring GoogleTest and GoogleMock to your unique workflows.
+
+---
+
+## Summary Diagram: Customization Workflow
+
+```mermaid
+flowchart TD
+  A[Identify Need to Customize] --> B{Type of Customization}
+  B -->|Custom Assertion/Matcher| C[Write MATCHER or Matcher Class]
+  B -->|Custom Action| D[Define ACTION or Functor/Lambda]
+  B -->|Custom Mock Behavior| E[Use MOCK_METHOD & ON_CALL Delegation]
+  B -->|Custom Reporting| F[Implement & Register TestEventListener]
+
+  C --> G[Use in EXPECT_CALL / EXPECT_THAT]
+  D --> G
+  E --> G
+  F --> H[Test Execution with Customizations]
+
+  G --> H
+  H --> I[Integration with Build/CI]
+
+  style B fill:#f9f,stroke:#333,stroke-width:2px
+  style H fill:#bbf,stroke:#333,stroke-width:2px
+```
